// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3-style.yml - yaml-verify 1`] = `
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

? [
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  ]
: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

`;

exports[`3-style.yml - yaml-verify 2`] = `
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

? [
      aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  ]
: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

`;

exports[`array-key.yml - yaml-verify 1`] = `
[1, 2, 3]: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1, 2, 3]: 123

`;

exports[`array-key.yml - yaml-verify 2`] = `
[1, 2, 3]: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1, 2, 3]: 123

`;

exports[`array-value.yml - yaml-verify 1`] = `
123: [1, 2, 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123: [1, 2, 3]

`;

exports[`array-value.yml - yaml-verify 2`] = `
123: [1, 2, 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123: [1, 2, 3]

`;

exports[`comment.yml - yaml-verify 1`] = `
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

`;

exports[`comment.yml - yaml-verify 2`] = `
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

`;

exports[`comment-value.yml - yaml-verify 1`] = `
123: # hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123: # hello

`;

exports[`comment-value.yml - yaml-verify 2`] = `
123: # hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123: # hello

`;

exports[`common.yml - yaml-verify 1`] = `
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key1: value
key2:
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

`;

exports[`common.yml - yaml-verify 2`] = `
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key1: value
key2:
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

`;

exports[`explicit-key.yml - yaml-verify 1`] = `
? key1
: value
? key2
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key1: value
key2:
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value

`;

exports[`explicit-key.yml - yaml-verify 2`] = `
? key1
: value
? key2
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key1: value
key2:
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value

`;

exports[`in-sequence.yml - yaml-verify 1`] = `
- a: b
  c: d
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- a: b
  c: d

`;

exports[`in-sequence.yml - yaml-verify 2`] = `
- a: b
  c: d
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- a: b
  c: d

`;

exports[`key-with-leading-comment.yml - yaml-verify 1`] = `
? # comment
  key
: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
? # comment
  key
: value

`;

exports[`key-with-leading-comment.yml - yaml-verify 2`] = `
? # comment
  key
: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
? # comment
  key
: value

`;

exports[`mapping.yml - yaml-verify 1`] = `
key:
  key: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key:
  key: value

`;

exports[`mapping.yml - yaml-verify 2`] = `
key:
  key: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key:
    key: value

`;

exports[`middle-comment.yml - yaml-verify 1`] = `
!!map # comment
a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!map # comment
a: 123

`;

exports[`middle-comment.yml - yaml-verify 2`] = `
!!map # comment
a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!map # comment
a: 123

`;

exports[`middle-comments.yml - yaml-verify 1`] = `
!!map # comment 1
# comment 2
a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!map
# comment 1
# comment 2
a: 123

`;

exports[`middle-comments.yml - yaml-verify 2`] = `
!!map # comment 1
# comment 2
a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!map
# comment 1
# comment 2
a: 123

`;

exports[`props.yml - yaml-verify 1`] = `
--- !!map &anchor
a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!map &anchor
a: 123

`;

exports[`props.yml - yaml-verify 2`] = `
--- !!map &anchor
a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!map &anchor
a: 123

`;

exports[`props-in-map.yml - yaml-verify 1`] = `
a: !!map &anchor
  a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!map &anchor
  a: 123

`;

exports[`props-in-map.yml - yaml-verify 2`] = `
a: !!map &anchor
  a: 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!map &anchor
    a: 123

`;

exports[`quote-key.yml - yaml-verify 1`] = `
"a": 123
'b': 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"a": 123
"b": 123

`;

exports[`quote-key.yml - yaml-verify 2`] = `
"a": 123
'b': 123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"a": 123
"b": 123

`;

exports[`sequence.yml - yaml-verify 1`] = `
key:
- value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key:
  - value

`;

exports[`sequence.yml - yaml-verify 2`] = `
key:
- value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
key:
    - value

`;

exports[`tag-key.yml - yaml-verify 1`] = `
? !!tag key
: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!tag key: value

`;

exports[`tag-key.yml - yaml-verify 2`] = `
? !!tag key
: value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!tag key: value

`;
